# status-area-applet-tor

./: Makefile.am  README.md  configure.ac  status-area-applet-tor.sudoers  tor_transparent_proxy.sh  torrc
data/: Makefile.am  status-area-applet-tor.desktop
debian/: changelog  control  postinst  rules
src/: Makefile.am  ind.c  ind.h  socket.c  socket.h  status-area-applet-tor.c  tctl.c  tctl.h
