desktoplib_LTLIBRARIES = status-area-applet-tor.la
desktoplibdir = $(hildondesktoplibdir)

status_area_applet_tor_la_SOURCES = \
	status-area-applet-tor.c \
	ind.c \
	socket.c \
	tctl.c
status_area_applet_tor_la_CFLAGS  = $(SAAT_CFLAGS)
status_area_applet_tor_la_LIBADD  = $(SAAT_LIBS)
status_area_applet_tor_la_LDFLAGS = -module -avoid-version
